# BE

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.sh
.github/workflows/: checks.yml  deploy.yml
apps/assignments/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/assignments/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
apps/common/: admin.py  permissions.py  utils.py
apps/courses/: admin.py  apps.py  models.py  serializers.py  set_referrer_acl.py  signals.py  urls.py  views.py
apps/courses/migrations/: 0001_initial.py  0002_initial.py  0003_alter_lecture_instructor.py
apps/registrations/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/registrations/migrations/: 0001_initial.py  0002_initial.py  0003_alter_enrollment_student.py
apps/reviews/: admin.py  models.py  serializers.py  urls.py  views.py
apps/reviews/migrations/: 0001_initial.py  0002_initial.py  0003_alter_review_student.py
apps/terms/: admin.py  models.py  serializers.py  urls.py  views.py
apps/terms/migrations/: 0001_initial.py  0002_initial.py  0003_termsagreement_deleted_at_termsagreement_restored_at_and_more.py  0004_alter_termsagreement_unique_together.py
apps/users/: adapters.py  admin.py  apps.py  authentications.py  exceptions.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
config/: authentication.py  urls.py
config/settings/: __init__.py  base.py  dev.py  prod.py
resources/nginx/: nginx.conf
resources/scripts/: cert.sh  run.sh
(+5 files in other folders)
