[project]
name = "imagine the sound"
version = "0.1.0"
description = "Joint Project"
authors = [
    {name = "Umdoong",email = "umdoongs@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.6"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
